# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.470 2009/02/25 13:32:08 mpagano Exp $

*git-sources-2.6.29_rc6-r2 (25 Feb 2009)

  25 Feb 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc6-r2.ebuild:
  Version bump

*git-sources-2.6.29_rc6-r1 (24 Feb 2009)

  24 Feb 2009; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.29_rc4-r1.ebuild, -git-sources-2.6.29_rc4-r2.ebuild,
  -git-sources-2.6.29_rc4-r3.ebuild, -git-sources-2.6.29_rc4-r4.ebuild,
  -git-sources-2.6.29_rc4-r5.ebuild, -git-sources-2.6.29_rc4-r6.ebuild,
  -git-sources-2.6.29_rc4-r7.ebuild, +git-sources-2.6.29_rc6-r1.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.29_rc5-r7 (23 Feb 2009)

  23 Feb 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc5-r7.ebuild:
  Version bump

*git-sources-2.6.29_rc5-r6 (22 Feb 2009)

  22 Feb 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc5-r6.ebuild:
  Version bump

*git-sources-2.6.29_rc5-r5 (21 Feb 2009)

  21 Feb 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc5-r5.ebuild:
  Version bump

*git-sources-2.6.29_rc5-r4 (20 Feb 2009)

  20 Feb 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc5-r4.ebuild:
  Version bump

*git-sources-2.6.29_rc5-r3 (19 Feb 2009)

  19 Feb 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc5-r3.ebuild:
  Version bump

*git-sources-2.6.29_rc5-r2 (18 Feb 2009)

  18 Feb 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc5-r2.ebuild:
  Version bump

*git-sources-2.6.29_rc5-r1 (18 Feb 2009)

  18 Feb 2009; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.29_rc3-r1.ebuild, -git-sources-2.6.29_rc3-r2.ebuild,
  -git-sources-2.6.29_rc3-r3.ebuild, -git-sources-2.6.29_rc3-r4.ebuild,
  -git-sources-2.6.29_rc3-r5.ebuild, -git-sources-2.6.29_rc3-r6.ebuild,