@@ -9,6 +9,7 @@ DIST patch-2.6.29-rc5-git7.bz2 121825 RMD160 fdfa03cc2f50b462f2c9481d36119af9058
 DIST patch-2.6.29-rc5.bz2 12038841 RMD160 1e921be493967c219171205540942903c353da04 SHA1 a532af4ac433a39351ee8e982e21d1f9606b3803 SHA256 e5ad0ec9b0facaab5982a0d48534292e6d3a6a3e6dca60e798e8b8eeda2f8a8e
 DIST patch-2.6.29-rc6-git1.bz2 37773 RMD160 ccf5f5c5128272675b1b952debee959418e7c0e5 SHA1 111a9f30988ea83a2e18a35cbdf3d85ffb807e41 SHA256 e1d96950b2f0d1f22fb8e6f140b428849c4717c4da8f6d016c1b5a87f59708c7
 DIST patch-2.6.29-rc6-git2.bz2 56295 RMD160 5e1ed8a63d29aca102d48acdc9487b105fe2cf00 SHA1 9777b1c6c7f3e5512a0d12b47d8a1615fd3602f3 SHA256 9bb27556d64b8ad176b34e807cd5b19b12c3cb52d778424ac617f1dffd53a985
+DIST patch-2.6.29-rc6-git3.bz2 70565 RMD160 3bdf1a537b44ce63d437fb815c80c30d61cb764d SHA1 696ab250e4c18f37ed0763c898649c9e2d3c4679 SHA256 edc1b0ea8f8382d929a795887e2fed17c0c5c22ed87c994c0594ef5ed8523eac
 DIST patch-2.6.29-rc6.bz2 12146448 RMD160 4544ba0922fa34958b790e4ec40f39e4e2e31013 SHA1 18b4cfe93381164e2a03222f14d5a169fbbcbf5a SHA256 035bbd4c1ac9c5b3a42e58777446e0370ca66d9258dc30a9f4c5ad48ebfacd65
 EBUILD git-sources-2.6.29_rc5-r1.ebuild 1242 RMD160 12badeee7e09234525ead4a787f741ffe2db47d2 SHA1 55a0fc0bf170e5d81064ab56886bb5debe00c4b7 SHA256 de542af2765f822c792ec272bdcbdac1f58c8131cf0d6ee1fa49f76b78cc0d3a
 EBUILD git-sources-2.6.29_rc5-r2.ebuild 1242 RMD160 f2cbf855342700d02b6a44ca2e3e22b36eeb901a SHA1 d98d36be943514d9157f08fd04e574ccff4a2b93 SHA256 37b69a2b11c3fc7917c32345a4d89a2d603d3cfb14c7bd0df06f304b7da52291
@@ -19,5 +20,6 @@ EBUILD git-sources-2.6.29_rc5-r6.ebuild 1242 RMD160 f3c93fd386b6f239cde0c9e48a84
 EBUILD git-sources-2.6.29_rc5-r7.ebuild 1242 RMD160 661f0a4350406ef75e98b4af5f5c159a34b17fa8 SHA1 bf14bb88a26e9453a8475143acad66ee6875c0bc SHA256 074aa24d8d65b035e76ca34a49ad77d5b566bfc487ea836e6de95ce9087dd1f8
 EBUILD git-sources-2.6.29_rc6-r1.ebuild 1242 RMD160 e13dd5863c4fb33d4b3dcbba562c65264a622408 SHA1 52921fec1d8ecca7b137830183c8c079721ca826 SHA256 e06b2c5958bb3e67835b6d88fd2ca8de6705f41f85d2ba6a38ada5a51758f976
 EBUILD git-sources-2.6.29_rc6-r2.ebuild 1242 RMD160 7586a5f26f390fa9d1f7a5c001cff69fd81ab940 SHA1 55a0e03c8043b3d442f4dbb470f8d58b4e99bf38 SHA256 e32479631cb00b3fe48b7c9a56184440d5cdb92d7ee0a504880abbee3309657a
-MISC ChangeLog 90054 RMD160 e168e65f3cc61b2d1f42ac59b43a57b58bdd46e4 SHA1 768232a51d2ff86d96684febad09d716982c9e37 SHA256 70e284260cc8f1175b68bae80d30c4e9a24a006ce35535f86339a21ed3e37473
+EBUILD git-sources-2.6.29_rc6-r3.ebuild 1242 RMD160 388c292b47e562b1fa4b1bd9347d489e91bcb9b8 SHA1 7013166d6e59043105ffb8afac351babd1f5fbab SHA256 3b752a37a2b13a9c2ec7abedb45d883c11831dc4a4d5b4c16bb85028763db14d
+MISC ChangeLog 90197 RMD160 801f80d35bbb60cc13349d303d50dde40732ce5b SHA1 367f21a8b9e91f3e864eb83531c664678db99b4d SHA256 9722e1ee555076a515a01568763b376abc5d0cef4ac85d6a31b5b82ae9a4d570
 MISC metadata.xml 443 RMD160 2b491a6310ff59f0658f64be1328b983ac82a462 SHA1 a65b3e97b9088758114ce0dbb46abb15879211e0 SHA256 9232689e2d3a60e31b4b0194770e6395613a110b77bef2f4e2f98d919acbaf13
