@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.470 2009/02/25 13:32:08 mpagano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.471 2009/02/26 01:47:42 mpagano Exp $
+
+*git-sources-2.6.29_rc6-r3 (26 Feb 2009)
+
+  26 Feb 2009; Mike Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.29_rc6-r3.ebuild:
+  Version bump
 
 *git-sources-2.6.29_rc6-r2 (25 Feb 2009)
 
